--- a/hotel/templates/monitor.html
+++ b/hotel/templates/monitor.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
+
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>空调管理员</title>
-    <link rel="stylesheet" href="/static/font/ds_digital/monitor.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+
+    <title>Monitor </title>
+    <link rel="shortcut icon" href="img/favicon.ico">
+
+    <!-- global stylesheets -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/font-icon-style.css">
+    <link rel="stylesheet" href="/static/css/style.default.css" id="theme-stylesheet">
+
+    <!-- Core stylesheets -->
+    <link rel="stylesheet" href="/static/css/form.css">
+    <link rel="stylesheet" href="/static/css/my-client.css">
 
 
-     <script type="text/javascript">
+    <script type="text/javascript">
     $(document).ready(function(){
 	//自动刷新页面,10秒
 	setTimeout(function(){
@@ -19,59 +36,166 @@
     </script>
 
 </head>
+
 <body>
-    <div class="container">
-        <h1>空调管理员</h1>
-        <div class="rooms">
 
-            <!-- 房间循环开始 -->
-            <div class="room">
-                <h2>房间 1</h2>
-                <p><strong>空调模式：</strong><span id="mode1">制冷</span></p>
-                <p><strong>空调温度：</strong><span id="ac-temp1">22°C</span></p>
-                <p><strong>空调风速：</strong><span id="ac-speed1">中速</span></p>
-                <p><strong>室内温度：</strong><span id="room-temp1">24°C</span></p>
-                <p><strong>费用：</strong><span id="cost1">$15.00</span></p>
-                <p><strong>费率：</strong><span id="rate1">$1.50/小时</span></p>
-            </div>
-            <div class="room">
-                <h2>房间 2</h2>
-                <p><strong>空调模式：</strong><span id="mode2">制冷</span></p>
-                <p><strong>空调温度：</strong><span id="ac-temp2">22°C</span></p>
-                <p><strong>空调风速：</strong><span id="ac-speed2">中速</span></p>
-                <p><strong>室内温度：</strong><span id="room-temp2">24°C</span></p>
-                <p><strong>费用：</strong><span id="cost2">$15.00</span></p>
-                <p><strong>费率：</strong><span id="rate2">$1.50/小时</span></p>
-            </div>
-            <div class="room">
-                <h2>房间 3</h2>
-                <p><strong>空调模式：</strong><span id="mode3">制冷</span></p>
-                <p><strong>空调温度：</strong><span id="ac-temp3">22°C</span></p>
-                <p><strong>空调风速：</strong><span id="ac-speed3">中速</span></p>
-                <p><strong>室内温度：</strong><span id="room-temp3">24°C</span></p>
-                <p><strong>费用：</strong><span id="cost3">$15.00</span></p>
-                <p><strong>费率：</strong><span id="rate3">$1.50/小时</span></p>
-            </div>
-            <div class="room">
-                <h2>房间 4</h2>
-                <p><strong>空调模式：</strong><span id="mode4">制冷</span></p>
-                <p><strong>空调温度：</strong><span id="ac-temp4">22°C</span></p>
-                <p><strong>空调风速：</strong><span id="ac-speed4">中速</span></p>
-                <p><strong>室内温度：</strong><span id="room-temp4">24°C</span></p>
-                <p><strong>费用：</strong><span id="cost4">$15.00</span></p>
-                <p><strong>费率：</strong><span id="rate4">$1.50/小时</span></p>
-            </div>
-            <div class="room">
-                <h2>房间 5</h2>
-                <p><strong>空调模式：</strong><span id="mode5">制冷</span></p>
-                <p><strong>空调温度：</strong><span id="ac-temp5">22°C</span></p>
-                <p><strong>空调风速：</strong><span id="ac-speed5">中速</span></p>
-                <p><strong>室内温度：</strong><span id="room-temp5">24°C</span></p>
-                <p><strong>费用：</strong><span id="cost5">$15.00</span></p>
-                <p><strong>费率：</strong><span id="rate5">$1.50/小时</span></p>
-            </div>
+<!--====================================================
+                     MAIN NAVBAR
+======================================================-->
+    <header class="header">
 
+        <nav class="navbar navbar-expand-lg ">
+        <h3 class='col-sm-12' style="text-align:center">空调管理员</h3>
+        </nav>
+    </header>
+
+<!--====================================================
+                    PAGE CONTENT
+======================================================-->
+    <div class="page-content d-flex align-items-stretch">
+
+        <!--***** SIDE NAVBAR *****-->
+        <nav class="side-navbar">
+            <div class="sidebar-header d-flex align-items-center">
+                <div class="avatar"></div>
+                <div class="title">
+                    <h4 class="h4">切换身份</h4>
+                </div>
+            </div>
+            <hr>
+            <!-- Sidebar Navidation Menus-->
+            <ul class="list-unstyled">
+                <li> <a href="/recp"><i class="icon-home"></i>前台</a></li>
+                <li> <a href="/manager"> <i class="fa fa-bar-chart"></i>经理</a></li>
+
+            </ul><span class="heading">Extras</span>
+            <ul class="list-unstyled">
+                <li> <a href="#"> <i class="icon-picture"></i>Demo </a></li>
+            </ul>
+        </nav>
+
+        <div class="content-inner form-cont">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <div class="card form" id="form1">
+                        <div class="card-header">
+                            <h5>监视界面</h5>
+                        </div>
+                        <br>
+
+                        <table>
+                            <tr>
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>房间：{{room_id.1}}</h5></td><tr>
+                                        <tr>
+                                            <td><p id="r1">状态:{{ state.1 }}</p></td>
+                                            <td><p>风速：{{fan_speed.1}}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>室内温度：{{current_temp.1}}℃</p></td>
+                                            <td><p>费用：{{ fee.1 }}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>设定温度：{{target_temp.1}}℃</p></td>
+                                            <td><p>费率：{{fee_rate.1}}</p></td>
+                                        </tr>
+                                    </table>
+                                </td>
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>房间：{{room_id.2}}</h5></td><tr>
+                                        <tr>
+                                            <td><p id="r2">状态:{{ state.2 }}</p></td>
+                                            <td><p>风速：{{fan_speed.2}}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>室内温度：{{current_temp.2}}℃</p></td>
+                                            <td><p>费用：{{ fee.2 }}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>设定温度：{{target_temp.2}}℃</p></td>
+                                            <td><p>费率：{{fee_rate.2}}</p></td>
+                                        </tr>
+                                    </table>
+                                </td>
+
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>房间：{{room_id.3}}</h5></td><tr>
+                                        <tr>
+                                            <td><p id="r3">状态:{{ state.3 }}</p></td>
+                                            <td><p>风速：{{fan_speed.3}}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>室内温度：{{current_temp.3}}℃</p></td>
+                                            <td><p>费用：{{ fee.3 }}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>设定温度：{{target_temp.3}}℃</p></td>
+                                            <td><p>费率：{{fee_rate.3}}</p></td>
+                                        </tr>
+                                    </table>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>房间：{{room_id.4}}</h5></td><tr>
+                                        <tr>
+                                            <td><p id="r4">状态:{{ state.4 }}</p></td>
+                                            <td><p>风速：{{fan_speed.4}}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>室内温度：{{current_temp.4}}℃</p></td>
+                                            <td><p>费用：{{ fee.4 }}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>设定温度：{{target_temp.4}}℃</p></td>
+                                            <td><p>费率：{{fee_rate.4}}</p></td>
+                                        </tr>
+                                    </table>
+                                </td>
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>房间：{{room_id.5}}</h5></td><tr>
+                                        <tr>
+                                            <td><p id="r5">状态:{{ state.5 }}</p></td>
+                                            <td><p>风速：{{fan_speed.5}}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>室内温度：{{current_temp.5}}℃</p></td>
+                                            <td><p>费用：{{ fee.5 }}</p></td>
+                                        </tr>
+                                        <tr>
+                                            <td><p>设定温度：{{target_temp.5}}℃</p></td>
+                                            <td><p>费率：{{fee_rate.5}}</p></td>
+                                        </tr>
+                                    </table>
+                                </td>
+
+                                <td class="screen">
+                                    <table style="width:240px">
+                                        <tr><td><h5>维修中...</h5></td><tr>
+
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <!--Global Javascript -->
+
+
+
 </body>
+
 </html>
