--- a/hotel/templates/all.html
+++ b/hotel/templates/all.html
@@ -83,17 +83,17 @@
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-3 fa-2x tm-form-element-icon"></i>
                                     <input name="default" type="number" class="form-control" id="default"
-                                           placeholder="默认温度" min="16" max="30">
+                                           placeholder="默认温度" min="16" max="30" value="22">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-50">
                                     <i class="fa fa-thermometer-0 fa-2x tm-form-element-icon"></i>
                                     <input name="low" type="number" class="form-control" id="min-temperature"
-                                           placeholder="最低温度">
+                                           placeholder="最低温度" value="6">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-50">
                                     <i class="fa fa-thermometer-4 fa-2x tm-form-element-icon"></i>
                                     <input name="high" type="number" class="form-control" id="max-temperature"
-                                           placeholder="最高温度">
+                                           placeholder="最高温度" value="40">
                                 </div>
 
                             </div>
@@ -136,23 +136,23 @@
                             <div class="form-row tm-search-form-row">
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-2 fa-2x tm-form-element-icon"></i>
-                                    <input name="r1" type="number" class="form-control" placeholder="1号的初始温度">
+                                    <input name="r1" type="number" class="form-control" placeholder="1号的初始温度" value="10">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-2 fa-2x tm-form-element-icon"></i>
-                                    <input name="r2" type="number" class="form-control" placeholder="2号的初始温度">
+                                    <input name="r2" type="number" class="form-control" placeholder="2号的初始温度" value="15">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-2 fa-2x tm-form-element-icon"></i>
-                                    <input name="r3" type="number" class="form-control" placeholder="3号的初始温度">
+                                    <input name="r3" type="number" class="form-control" placeholder="3号的初始温度" value="18">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-2 fa-2x tm-form-element-icon"></i>
-                                    <input name="r4" type="number" class="form-control" placeholder="4号的初始温度">
+                                    <input name="r4" type="number" class="form-control" placeholder="4号的初始温度" value="12">
                                 </div>
                                 <div class="form-group tm-form-element tm-form-element-100">
                                     <i class="fa fa-thermometer-2 fa-2x tm-form-element-icon"></i>
-                                    <input name="r5" type="number" class="form-control" placeholder="5号的初始温度">
+                                    <input name="r5" type="number" class="form-control" placeholder="5号的初始温度" value="14">
                                 </div>
                             </div>
                             <div class="form-group tm-form-element tm-form-element-4">
